--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,6 +34,7 @@
     font-size: 26px;
     font-weight: 700;
     line-height: 1.15;
+    letter-spacing: 0.03em;
 }
 
 .logo-word2 {
@@ -45,12 +46,14 @@
 }
 
 .pages {
-    color: #212121;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
     color: var(--color-text-dark);
     letter-spacing: 0.02em;
+    width: 68px;
+    height: 16px;
+    
 }
 
 .pages:hover {
@@ -207,12 +210,18 @@ li {
     border-radius: 4px;
     border: 1px solid transparent;
     letter-spacing: 0.03em;
+    width: 103px;
+    height: 38px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
 }
 
 .portfolio-button:hover {
     background-color: #2196F3;
     color: #fff;
     border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-button :focus {
