--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -229,12 +229,11 @@ li {
 /* portfolio.css */
 
 .portfolio-button {
+    font-family: var(--font-family-roboto);
     background-color: #F5F4FA;
     border-radius: 4px;
     border: 1px solid transparent;
     letter-spacing: 0.03em;
-    width: 103px;
-    height: 38px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
@@ -255,13 +254,13 @@ li {
 
 .project-name {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 2;
     color: var(--color-text-dark);
 }
 
 .project-text {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 2;
     color: var(--color-text-grey);
 }
