--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -423,7 +423,9 @@ html {
     font-size: 18px;
     line-height: 2;
     color: var(--color-text-dark);
-    margin-bottom: 4px;
+    /* margin-bottom: 4px; */
+    padding-left: 24px;
+    padding-top: 20px;
 }
 
 .project-text {
@@ -431,6 +433,8 @@ html {
     line-height: 2;
     color: var(--color-text-grey);
     margin-bottom: 20px;
+    padding-left: 24px;
+    padding-top: 4px;
 }
 
 .box {
