--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -325,12 +325,17 @@ html {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
+    padding-top: 30px;
+    text-align: center;
 }
 
 .position {
     color: var(--color-text-grey);
     font-size: 16px;
     line-height: 1.1;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    text-align: center;
 }
 
 .container .footer {
