--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -53,6 +53,12 @@ h6,
 p {
     margin: 0;
 }
+
+header {
+    padding: 24px 0;
+    border-bottom: 1px solid #ECECEC;
+}
+
 address {
     font-style: normal;
 }
@@ -79,16 +85,16 @@ html {
 .container {
     /* display: flex; */
     max-width: 1200px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin: 0px auto;
+    /* padding-left: 15px; */
+    /* padding-right: 15px; */
 }
+
 
 .header-inner {
     font-family: var(--font-family-roboto);
     display: inline-block;
-    border-bottom: 1px;
-    border-bottom: 1px solid #ECECEC;
-    padding: 24px 0px;
     align-items: center;
     min-width: 1200px;
     display: flex;
@@ -208,10 +214,9 @@ html {
     letter-spacing: 0.06em;
     width: 696px;
     height: 120px;
-    /* padding-top: 200px; */
-    padding-bottom: 280px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
 }
 
 .button {
@@ -225,7 +230,6 @@ html {
     cursor: pointer;
     letter-spacing: 0.06em;
     padding: 10px 32px;
-    margin-bottom: 200px;
 }
 
 .button :hover {
@@ -252,8 +256,8 @@ html {
 .box-peculiarities {
     width: 270px;
     height: 101px;
-    margin-top: 94px;
-    margin-bottom: 94px;
+    /* margin-top: 94px; */
+    /* margin-bottom: 94px; */
 }
 
 .peculiarities-boxes :not(:last-child) {
@@ -261,7 +265,8 @@ html {
 }
 
 .peculiarities-boxes {
-    /* margin: 0px auto; */
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .peculiarities-title {
@@ -270,6 +275,7 @@ html {
     line-height: 1.17;
     color: var(--color-text-dark);
     display: inline-block;
+    padding-bottom: 10px;
 }
 
 .peculiarities-text {
@@ -286,7 +292,11 @@ html {
     line-height: 1.17;
     color: var(--color-text-dark);
     text-align: center;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
+}
+
+.services-title {
+    padding-bottom: 94px;
 }
 
 .services {
@@ -297,10 +307,13 @@ html {
     margin-right: 0;
 }
 
-.our-team-container {
+.our-team-section {
     background-color: #F5F4FA;
-    margin-top: 94px;
-    margin-bottom: 94px;
+}
+
+.our-team-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .employee {
@@ -345,8 +358,7 @@ html {
 .footer {
     background-color: var(--background-color-grey);
     align-items: center;
-    /* display: block; */
-    /* display: flex; */
+    padding-top: 60px;   
 }
 
 .address {
@@ -355,7 +367,14 @@ html {
     line-height: 1.7;
     font-weight: 400;
     letter-spacing: 0.03em;
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 60px;
+}
+
+.info-items {
+    display: flex;
+    flex-direction: column;
 }
 
 .map {
@@ -365,6 +384,8 @@ html {
     line-height: 1.7;
     font-weight: 400;
     letter-spacing: 0.03em;
+    display: flex;
+    flex-direction: column;
 }
 
 .contacts {
@@ -374,6 +395,8 @@ html {
     line-height: 1.7;
     font-weight: 400;
     letter-spacing: 0.03em;
+    display: flex;
+    flex-direction: column;
 }
 
 /* portfolio.css */
@@ -384,6 +407,8 @@ html {
     text-align: center;
     margin-right: auto;
     margin-left: auto;
+    padding-top: 63px;
+    padding-bottom: 34px;
 }
 
 .portfolio-button {
@@ -397,8 +422,9 @@ html {
     font-size: 16px;
     line-height: 1.6;
     margin-right: 8px;
-    margin-bottom: 50px;
-    margin-top: 63px;
+    
+    
+    padding: 6px 22px;
 }
 
 .portfolio-button:hover {
@@ -447,8 +473,21 @@ html {
     margin-right: 30px;
     flex-wrap: wrap;
     margin-left: auto;
+    margin-bottom: 30px;
+}
+
+.last-box {
+    border: 1px solid #EEEEEE;
+    margin-right: 30px;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-bottom: 97px;
 }
 
 .box:nth-child(3n) {
+    margin-right: 0;
+}
+
+.last-box:last-child {
     margin-right: 0;
 }
