--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,8 +87,10 @@ html {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1170px;
     margin: 0px auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 
@@ -431,20 +433,25 @@ html {
     flex-wrap: wrap;
 }
 
+.project-text-box {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .project-name {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     color: var(--color-text-dark);
     padding-left: 24px;
-    padding-top: 20px;
+    
 }
 
 .project-text {
     font-size: 16px;
     line-height: 2;
     color: var(--color-text-grey);
-    margin-bottom: 20px;
+    
     padding-left: 24px;
     padding-top: 4px;
 }
@@ -462,7 +469,6 @@ html {
     margin-right: 30px;
     flex-wrap: wrap;
     margin-left: auto;
-    margin-bottom: 97px;
 }
 
 .box:nth-child(3n) {
