--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -322,8 +322,30 @@ section:nth-child(2) {
     background-color: #fff;
 }
 
+.employee-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.employee-item {
+    width: 44px;
+    height: 44px;
+}
+
 .inst-source {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: var(--icon-text-grey);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.instagram:hover {
+    background-color: var(--color-text-blue);
+    color: #fff;
 }
 
 .instagram-icon-1 {
@@ -331,9 +353,7 @@ section:nth-child(2) {
 }
 
 .instagram-icon-1:hover {
-    background-color: var(--color-text-blue);
-    border: 1px solid 50%;
-    fill: #fff;
+    
 }
 
 .twitter-icon-1 {
